<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Display the list of ingredients -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_servings_label" />

</layout>
