...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_add"
            android:layout_width="@dimen/size_add_image"
            android:layout_height="@dimen/size_add_image"
            android:layout_margin="@dimen/margin_activity"
            android:contentDescription="@string/add_content_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
