...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_previous">

                <!-- Displays a video -->
                <com.google.android.exoplayer2.ui.PlayerView
                    android:id="@+id/player_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:controller_layout_id="@layout/custom_playback_control"
                    app:fastforward_increment="3000"
                    app:rewind_increment="3000"
                    app:show_timeout="2000" />
...
